--- a/index.html
+++ b/index.html
@@ -2,403 +2,20 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <title>Cupons Ativos - Centro de Compras</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎟️ Cupons Promocionais - Descontos Exclusivos</title>
-  <meta name="description" content="Encontre cupons de desconto para Eletrônicos, Moda, Viagens, Casa, Beleza e mais. Economize com códigos promocionais válidos até 2025!">
-  <meta name="keywords" content="cupons de desconto, promoções, Eletrônicos, Moda, Viagens, Casa, Beleza, Black Friday 2025">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Seu Nome">
-  <link rel="icon" type="image/png" href="logos/favicon.png">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    
-    :root {
-      --primary-color: #1e3a8a; /* Navy blue */
-      --secondary-color: #f97316; /* Modern orange */
-      --accent-color: #f1f5f9; /* Light gray for backgrounds */
-      --text-color: #2d3748; /* Darker gray for text */
-      --success-color: #22c55e; /* Green for copy button */
-    }
-
-    body {
-      font-family: 'Roboto', Arial, sans-serif;
-      font-size: 16px;
-      background: var(--accent-color);
-      color: var(--text-color);
-      line-height: 1.7;
-    }
-
-    header {
-      background: linear-gradient(135deg, var(--primary-color) 0%, #2b4eb1 100%);
-      color: white;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-
-    header h1 {
-      font-family: 'Poppins', sans-serif;
-      font-size: 2.5em;
-      font-weight: 700;
-      margin-bottom: 10px;
-      letter-spacing: -0.5px;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      transition: color 0.3s;
-    }
-
-    nav ul li a:hover {
-      color: var(--secondary-color);
-    }
-
-    .cupons-container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 30px 20px;
-      text-align: center;
-    }
-
-    .cupons-container h1 {
-      font-family: 'Poppins', sans-serif;
-      font-size: 2.2em;
-      font-weight: 700;
-      margin-bottom: 15px;
-      color: var(--primary-color);
-    }
-
-    .cupons-container p {
-      font-size: 1.15em;
-      max-width: 800px;
-      margin: 0 auto 20px;
-      color: #555;
-    }
-
-    .categorias-filtro {
-      margin-bottom: 30px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-    }
-
-    .categorias-filtro button {
-      background: #e5e7eb;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: 500;
-      transition: background 0.3s ease, transform 0.2s ease;
-    }
-
-    .categorias-filtro button.active,
-    .categorias-filtro button:hover {
-      background: var(--secondary-color);
-      color: white;
-      transform: scale(1.05);
-    }
-
-    .categorias-filtro button:focus {
-      outline: 2px solid var(--secondary-color);
-      outline-offset: 2px;
-    }
-
-    .cupons-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-    }
-
-    .cupom-card {
-      background: white;
-      padding: 24px;
-      border-radius: 16px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
-      text-align: center;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      opacity: 0;
-      animation: fadeIn 0.5s ease forwards;
-    }
-
-    .cupom-card:nth-child(odd) { animation-delay: 0.1s; }
-    .cupom-card:nth-child(even) { animation-delay: 0.2s; }
-
-    .cupom-card.active {
-      display: block;
-    }
-
-    .cupom-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.12);
-    }
-
-    .cupom-card img {
-      max-width: 120px;
-      height: auto;
-      margin-bottom: 15px;
-      border-radius: 8px;
-    }
-
-    .cupom-card h3 {
-      font-family: 'Poppins', sans-serif;
-      font-size: 1.3em;
-      margin-bottom: 10px;
-    }
-
-    .cupom-codigo {
-      background: var(--secondary-color);
-      color: white;
-      font-weight: bold;
-      padding: 12px 16px;
-      border-radius: 8px;
-      font-size: 1.1em;
-      margin-bottom: 15px;
-      display: inline-block;
-      letter-spacing: 1px;
-    }
-
-    .btn-copiar {
-      background: var(--success-color);
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: 500;
-      transition: background 0.3s ease, transform 0.2s ease;
-    }
-
-    .btn-copiar:hover {
-      background: #16a34a;
-      transform: scale(1.05);
-    }
-
-    .btn-copiar:focus {
-      outline: 2px solid var(--secondary-color);
-      outline-offset: 2px;
-    }
-
-    .validade {
-      font-size: 0.95em;
-      color: #6b7280;
-      margin-top: 10px;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .ad-banner {
-      margin: 20px auto;
-      max-width: 728px;
-      text-align: center;
-      background: #f0f0f0;
-      padding: 10px;
-      border-radius: 8px;
-    }
-
-    footer {
-      background: linear-gradient(135deg, var(--primary-color) 0%, #2b4eb1 100%);
-      color: white;
-      text-align: center;
-      padding: 30px 20px;
-      margin-top: 40px;
-    }
-
-    footer ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-    }
-
-    footer ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: 500;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      transition: color 0.3s;
-    }
-
-    footer ul li a::before {
-      content: '🔗';
-      font-size: 1em;
-    }
-
-    footer ul li a:hover {
-      color: var(--secondary-color);
-    }
-
-    @media (max-width: 600px) {
-      .cupons-grid {
-        grid-template-columns: 1fr;
-      }
-      header h1 {
-        font-size: 1.8em;
-      }
-      nav ul {
-        flex-direction: column;
-        gap: 10px;
-      }
-      .categorias-filtro button {
-        width: 45%;
-        margin: 5px;
-      }
-    }
+    body { font-family: sans-serif; margin: 2rem; background: #f5f5f5; }
+    .cupom { background: #fff; padding: 1rem; border-radius: 8px; margin-bottom: 1rem; box-shadow: 0 0 10px #ccc; }
+    .cupom h3 { margin: 0 0 0.5rem; }
+    .cupom p { margin: 0.25rem 0; }
+    .cupom a { display: inline-block; margin-top: 0.5rem; padding: 0.5rem 1rem; background: #28a745; color: white; text-decoration: none; border-radius: 4px; }
   </style>
 </head>
 <body>
-  <!-- Cabeçalho -->
-  <header>
-    <h1>🎟️ Cupons Promocionais</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="categorias.html">Categorias</a></li>
-        <li><a href="lojas.html">Lojas</a></li>
-        <li><a href="blog.html">Blog</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1>Cupons Ativos</h1>
+  <div id="cupons-container">Carregando cupons...</div>
 
-  <!-- Placeholder para Google Ads (728x90) -->
-  <div class="ad-banner">
-    <p>[Espaço para Google Ads - 728x90]</p>
-  </div>
-
-  <!-- Conteúdo principal -->
-  <main class="cupons-container">
-    <section aria-labelledby="cupons-title">
-      <h1 id="cupons-title">Os Melhores Cupons de Desconto</h1>
-      <p>Escolha uma categoria e economize com nossos cupons exclusivos!</p>
-      <div class="categorias-filtro" role="tablist">
-        <button role="tab" aria-selected="true" onclick="filtrarCupons('todos')" class="active">Todos</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('eletronicos')">Eletrônicos</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('moda')">Moda</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('viagens')">Viagens</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('casa')">Casa</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('beleza')">Beleza</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('esportes')">Esportes</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('livros')">Livros</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('alimentos')">Alimentos</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('saude')">Saúde</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('infantil')">Infantil</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('pets')">Pets</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('servicos')">Serviços</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('automotivo')">Automotivo</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('jogos')">Jogos</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('eletrodomesticos')">Eletrodomésticos</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('moveis')">Móveis</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('telefonia')">Telefonia</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('educacao')">Educação</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('entretenimento')">Entretenimento</button>
-        <button role="tab" aria-selected="false" onclick="filtrarCupons('ferramentas')">Ferramentas</button>
-      </div>
-      <div class="cupons-grid" id="cupons-grid" role="region" aria-live="polite">
-        <!-- Cupons serão adicionados dinamicamente -->
-      </div>
-    </section>
-  </main>
-
-  <!-- Placeholder para Google Ads (300x250) -->
-  <div class="ad-banner">
-    <p>[Espaço para Google Ads - 300x250]</p>
-  </div>
-
-  <!-- Rodapé -->
-  <footer>
-    <p>&copy; 2025 Cupons Promocionais. Todos os direitos reservados.</p>
-    <ul>
-      <li><a href="politica-privacidade.html">Política de Privacidade</a></li>
-      <li><a href="declaracao-afiliados.html">Declaração de Afiliados</a></li>
-      <li><a href="termos-de-uso.html">Termos de Uso</a></li>
-    </ul>
-  </footer>
-
-  <script>
-    // Sample coupon data
-    const cupons = [
-      { id: 1, categoria: 'eletronicos', loja: 'TechStore', codigo: 'TECH10', desconto: '10% OFF', validade: '31/12/2025', imagem: 'logos/techstore.png' },
-      { id: 2, categoria: 'moda', loja: 'FashionHub', codigo: 'MODA20', desconto: '20% OFF', validade: '15/11/2025', imagem: 'logos/fashionhub.png' },
-      { id: 3, categoria: 'viagens', loja: 'TravelNow', codigo: 'VIAGEM15', desconto: '15% OFF', validade: '30/11/2025', imagem: 'logos/travelnow.png' },
-      // Add more sample coupons as needed
-    ];
-
-    // Render coupons dynamically
-    function renderizarCupons(categoria = 'todos') {
-      const grid = document.getElementById('cupons-grid');
-      grid.innerHTML = '';
-
-      const filteredCupons = categoria === 'todos' ? cupons : cupons.filter(cupom => cupom.categoria === categoria);
-
-      if (filteredCupons.length === 0) {
-        grid.innerHTML = '<p>Nenhum cupom encontrado para esta categoria.</p>';
-        return;
-      }
-
-      filteredCupons.forEach(cupom => {
-        const card = document.createElement('div');
-        card.classList.add('cupom-card', 'active');
-        card.innerHTML = `
-          <img src="${cupom.imagem}" alt="Logo da loja ${cupom.loja}" loading="lazy">
-          <h3>${cupom.loja}</h3>
-          <p>${cupom.desconto}</p>
-          <div class="cupom-codigo" id="cupom-${cupom.id}">${cupom.codigo}</div>
-          <button class="btn-copiar" onclick="copiarCupom('cupom-${cupom.id}')">Copiar Cupom</button>
-          <p class="validade">Válido até: ${cupom.validade}</p>
-        `;
-        grid.appendChild(card);
-      });
-    }
-
-    // Copy coupon using Clipboard API
-    function copiarCupom(cupomId) {
-      const cupom = document.getElementById(cupomId);
-      if (cupom) {
-        navigator.clipboard.writeText(cupom.innerText)
-          .then(() => alert(`Cupom copiado: ${cupom.innerText}`))
-          .catch(() => alert('Erro ao copiar o cupom.'));
-      }
-    }
-
-    // Filter coupons
-    function filtrarCupons(categoria) {
-      renderizarCupons(categoria);
-      const botoes = document.querySelectorAll('.categorias-filtro button');
-      botoes.forEach(btn => {
-        btn.classList.remove('active');
-        btn.setAttribute('aria-selected', 'false');
-      });
-      const activeButton = document.querySelector(`button[onclick="filtrarCupons('${categoria}')"]`);
-      activeButton.classList.add('active');
-      activeButton.setAttribute('aria-selected', 'true');
-    }
-
-    // Initialize page
-    renderizarCupons();
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
