--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -1,89 +1,96 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Painel Administrativo - Centro de Compras</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Painel Administrativo - Centro de Compras</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <script src="https://cdn.socket.io/4.5.0/socket.io.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="connection-status hidden">
-        <div class="status-content">
-            <span><i class="fas fa-circle"></i> Status da Conexão</span>
-            <small id="status-message">Conectando...</small>
-        </div>
+  <div class="connection-status hidden">
+    <div class="status-content">
+      <span><i class="fas fa-circle"></i> Status da Conexão</span>
+      <small id="status-message">Conectando...</small>
     </div>
+  </div>
+  <header class="main-header">
     <div class="container">
-        <h1>Painel Administrativo</h1>
-        <form id="admin-product-form" class="admin-form">
-            <input type="hidden" id="id" name="id">
-            <div class="form-group">
-                <label for="nome">Nome do Produto</label>
-                <input type="text" id="nome" name="nome" required>
-            </div>
-            <div class="form-group">
-                <label for="preco">Preço (R$)</label>
-                <input type="number" id="preco" name="preco" step="0.01" required>
-            </div>
-            <div class="form-group">
-                <label for="categoria">Categoria</label>
-                <select id="categoria" name="categoria" required>
-                    <option value="eletronicos">Eletrônicos</option>
-                    <option value="moda">Moda</option>
-                    <option value="casa">Casa</option>
-                    <option value="beleza">Beleza</option>
-                    <option value="esportes">Esportes</option>
-                    <option value="infantil">Infantil</option>
-                    <option value="automotivo">Automotivo</option>
-                    <option value="games">Games</option>
-                    <option value="livros">Livros</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="loja">Loja</label>
-                <select id="loja" name="loja" required>
-                    <option value="amazon">Amazon</option>
-                    <option value="mercadolivre">Mercado Livre</option>
-                    <option value="shopee">Shopee</option>
-                    <option value="magalu">Magalu</option>
-                    <option value="shein">Shein</option>
-                    <option value="alibaba">Alibaba</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="link">Link do Produto</label>
-                <input type="url" id="link" name="link" required>
-            </div>
-            <div class="form-group">
-                <label for="descricao">Descrição</label>
-                <textarea id="descricao" name="descricao"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="imagens">Imagens</label>
-                <input type="file" id="imagens" name="imagens" multiple accept="image/*">
-            </div>
-            <button type="submit" class="btn-primary">Salvar Produto</button>
-            <div id="admin-form-feedback" class="feedback hidden"></div>
+      <h1>Painel Administrativo</h1>
+    </div>
+  </header>
+  <main class="main-content">
+    <div class="container">
+      <section class="admin-form">
+        <h2>Adicionar/Editar Produto</h2>
+        <form id="admin-product-form">
+          <input type="hidden" id="id" name="id">
+          <div class="form-group">
+            <label for="nome">Nome do Produto</label>
+            <input type="text" id="nome" name="nome" required>
+          </div>
+          <div class="form-group">
+            <label for="preco">Preço (R$)</label>
+            <input type="number" id="preco" name="preco" step="0.01" required>
+          </div>
+          <div class="form-group">
+            <label for="categoria">Categoria</label>
+            <select id="categoria" name="categoria" required>
+              <option value="eletronicos">Eletrônicos</option>
+              <option value="moda">Moda</option>
+              <option value="casa">Casa</option>
+              <!-- Adicione mais opções conforme necessário -->
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="loja">Loja</label>
+            <select id="loja" name="loja" required>
+              <option value="amazon">Amazon</option>
+              <option value="mercadolivre">Mercado Livre</option>
+              <!-- Adicione mais opções conforme necessário -->
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="link">Link do Produto</label>
+            <input type="url" id="link" name="link" required>
+          </div>
+          <div class="form-group">
+            <label for="descricao">Descrição</label>
+            <textarea id="descricao" name="descricao"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="imagens">Imagens</label>
+            <input type="file" id="imagens" name="imagens" multiple accept="image/*">
+          </div>
+          <button type="submit" class="btn-primary">Salvar Produto</button>
+          <div id="admin-form-feedback" class="feedback hidden"></div>
         </form>
+      </section>
+      <section>
+        <h2>Produtos Cadastrados</h2>
+        <div class="products-grid" id="admin-products-grid"></div>
         <div class="loading-container" id="admin-loading-spinner">
+          <div class="loading-spinner">
             <div class="spinner"></div>
             <p>Carregando produtos...</p>
+          </div>
         </div>
         <div class="empty-state" id="admin-mensagem-vazia">
-            <i class="fas fa-box-open empty-icon"></i>
-            <h3>Nenhum produto encontrado</h3>
-            <p>Adicione um novo produto para começar</p>
+          <i class="fas fa-box-open empty-icon"></i>
+          <h3>Nenhum produto encontrado</h3>
+          <p>Adicione um novo produto usando o formulário acima.</p>
         </div>
         <div class="error-state" id="admin-error-message">
-            <i class="fas fa-exclamation-circle error-icon"></i>
-            <h3>Ops! Algo deu errado</h3>
-            <p>Não foi possível carregar os produtos. Verifique sua conexão.</p>
+          <i class="fas fa-exclamation-circle error-icon"></i>
+          <h3>Ops! Algo deu errado</h3>
+          <p>Não foi possível carregar os produtos. Verifique sua conexão.</p>
+          <button class="btn-primary" onclick="fetchProducts()">Tentar Novamente</button>
         </div>
-        <div id="admin-products-grid" class="products-grid"></div>
+      </section>
     </div>
-    <script src="admin-script.js"></script>
+  </main>
+  <script src="admin-script.js"></script>
 </body>
 </html>
