--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -16,79 +16,113 @@
       <small id="status-message">Conectando...</small>
     </div>
   </div>
+
   <header class="main-header">
     <div class="container">
       <h1>Painel Administrativo</h1>
+      <button id="logout-btn" class="btn-secondary" style="display:none;">Sair</button>
     </div>
   </header>
+
   <main class="main-content">
     <div class="container">
-      <section class="admin-form">
-        <h2>Adicionar/Editar Produto</h2>
-        <form id="admin-product-form">
-          <input type="hidden" id="id" name="id">
+      <section class="admin-login" id="login-section">
+        <h2>Login de Administrador</h2>
+        <form id="login-form">
           <div class="form-group">
-            <label for="nome">Nome do Produto</label>
-            <input type="text" id="nome" name="nome" required>
+            <label for="username">Usuário</label>
+            <input type="text" id="username" name="username" required>
           </div>
           <div class="form-group">
-            <label for="preco">Preço (R$)</label>
-            <input type="number" id="preco" name="preco" step="0.01" required>
+            <label for="password">Senha</label>
+            <input type="password" id="password" name="password" required>
           </div>
-          <div class="form-group">
-            <label for="categoria">Categoria</label>
-            <select id="categoria" name="categoria" required>
-              <option value="eletronicos">Eletrônicos</option>
-              <option value="moda">Moda</option>
-              <option value="casa">Casa</option>
-              <!-- Adicione mais opções conforme necessário -->
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="loja">Loja</label>
-            <select id="loja" name="loja" required>
-              <option value="amazon">Amazon</option>
-              <option value="mercadolivre">Mercado Livre</option>
-              <!-- Adicione mais opções conforme necessário -->
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="link">Link do Produto</label>
-            <input type="url" id="link" name="link" required>
-          </div>
-          <div class="form-group">
-            <label for="descricao">Descrição</label>
-            <textarea id="descricao" name="descricao"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="imagens">Imagens</label>
-            <input type="file" id="imagens" name="imagens" multiple accept="image/*">
-          </div>
-          <button type="submit" class="btn-primary">Salvar Produto</button>
-          <div id="admin-form-feedback" class="feedback hidden"></div>
+          <button type="submit" class="btn-primary">Entrar</button>
+          <div id="login-feedback" class="feedback hidden"></div>
         </form>
       </section>
-      <section>
-        <h2>Produtos Cadastrados</h2>
-        <div class="products-grid" id="admin-products-grid"></div>
-        <div class="loading-container" id="admin-loading-spinner">
-          <div class="loading-spinner">
-            <div class="spinner"></div>
-            <p>Carregando produtos...</p>
+
+      <div id="admin-panel-content" style="display:none;">
+        <section class="admin-form">
+          <h2>Adicionar/Editar Produto</h2>
+          <form id="admin-product-form">
+            <input type="hidden" id="id" name="id">
+            <div class="form-group">
+              <label for="nome">Nome do Produto</label>
+              <input type="text" id="nome" name="nome" required>
+            </div>
+            <div class="form-group">
+              <label for="preco">Preço (R$)</label>
+              <input type="number" id="preco" name="preco" step="0.01" required>
+            </div>
+            <div class="form-group">
+              <label for="categoria">Categoria</label>
+              <select id="categoria" name="categoria" required>
+                <option value="eletronicos">Eletrônicos</option>
+                <option value="moda">Moda</option>
+                <option value="casa">Casa</option>
+                <option value="beleza">Beleza</option>
+                <option value="esportes">Esportes</option>
+                <option value="livros">Livros</option>
+                <option value="infantil">Infantil</option>
+                <option value="Celulares">Celulares</option>
+                <option value="Eletrodomésticos">Eletrodomésticos</option>
+                <option value="pet">Pet</option>
+                <option value="jardinagem">Jardinagem</option>
+                <option value="automotivo">Automotivo</option>
+                <option value="gastronomia">Gastronomia</option>
+                <option value="games">Games</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="loja">Loja</label>
+              <select id="loja" name="loja" required>
+                <option value="amazon">Amazon</option>
+                <option value="magalu">Magalu</option>
+                <option value="shein">Shein</option>
+                <option value="shopee">Shopee</option>
+                <option value="mercadolivre">Mercado Livre</option>
+                <option value="alibaba">Alibaba</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="link">Link do Produto</label>
+              <input type="url" id="link" name="link" required>
+            </div>
+            <div class="form-group">
+              <label for="descricao">Descrição</label>
+              <textarea id="descricao" name="descricao"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="imagens">Imagens</label>
+              <input type="file" id="imagens" name="imagens" multiple accept="image/*">
+            </div>
+            <button type="submit" class="btn-primary">Salvar Produto</button>
+            <div id="admin-form-feedback" class="feedback hidden"></div>
+          </form>
+        </section>
+        <section>
+          <h2>Produtos Cadastrados</h2>
+          <div class="products-grid" id="admin-products-grid"></div>
+          <div class="loading-container" id="admin-loading-spinner">
+            <div class="loading-spinner">
+              <div class="spinner"></div>
+              <p>Carregando produtos...</p>
+            </div>
           </div>
-        </div>
-        <div class="empty-state" id="admin-mensagem-vazia">
-          <i class="fas fa-box-open empty-icon"></i>
-          <h3>Nenhum produto encontrado</h3>
-          <p>Adicione um novo produto usando o formulário acima.</p>
-        </div>
-        <div class="error-state" id="admin-error-message">
-          <i class="fas fa-exclamation-circle error-icon"></i>
-          <h3>Ops! Algo deu errado</h3>
-          <p>Não foi possível carregar os produtos. Verifique sua conexão.</p>
-          <button class="btn-primary" onclick="fetchProducts()">Tentar Novamente</button>
-        </div>
-      </section>
+          <div class="empty-state" id="admin-mensagem-vazia">
+            <i class="fas fa-box-open empty-icon"></i>
+            <h3>Nenhum produto encontrado</h3>
+            <p>Adicione um novo produto usando o formulário acima.</p>
+          </div>
+          <div class="error-state" id="admin-error-message">
+            <i class="fas fa-exclamation-circle error-icon"></i>
+            <h3>Ops! Algo deu errado</h3>
+            <p>Não foi possível carregar os produtos. Verifique sua conexão.</p>
+            <button class="btn-primary" onclick="fetchProducts()">Tentar Novamente</button>
+          </div>
+        </section>
+      </div>
     </div>
   </main>
   <script src="admin-script.js"></script>
